[package]
name = "git-twig"
version = "0.1.0"
edition = "2024"
description = "Stacked branches + parallel worktrees for the AI agent age"
license = "MIT"

[[bin]]
name = "gt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
